test/spec_vectors/local_tee/fail/module_25.wat
(module (func $type-param-arg-empty-vs-num-in-call (param i32) (call 1 (local.tee 0)) (drop)) (func (param i32) (result i32) (local.get 0)))